force-app/main/default/objects/Report_Req__c/Report_Req__c.object-meta.xml
<CustomObject>
    <description>This is to capture requirements for a  &quot;single report&quot; that will be associated with a detailed requirement..</description>
    <label>Report Req</label>
    <nameField>
        <label>Report Req Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Req&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>