force-app/main/default/objects/Report_Req__c/fields/Assign_to_Developer__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign to Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Report_Req_s</relationshipName>
    <type>Lookup</type>
</CustomField>