force-app/main/default/objects/Report_Req__c/fields/Assign_to_Developer_Non_SF_User__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Developer_Non_SF_User__c</fullName>
    <label>Assign to Developer (Non SF User)</label>
    <type>TextArea</type>
</CustomField>