force-app/main/default/objects/Report_Req__c/fields/Data_Level__c.field-meta.xml
<CustomField>
    <fullName>Data_Level__c</fullName>
    <description>What data levels are needed?</description>
    <inlineHelpText>What data levels are needed?</inlineHelpText>
    <label>Data Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Detailed Transaction</fullName>
            </value>
            <value>
                <fullName>Daily Summary</fullName>
            </value>
            <value>
                <fullName>Weekly Summary</fullName>
            </value>
            <value>
                <fullName>Period Summary</fullName>
            </value>
            <value>
                <fullName>Yearly Summary</fullName>
            </value>
            <value>
                <fullName>Combination (Drill-Up/Down Capabilities)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>