force-app/main/default/objects/Report_Req__c/fields/Detailed_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Requirement__c</fullName>
    <label>Detailed Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Report Req&apos;s</relationshipLabel>
    <relationshipName>Report_Req_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>