force-app/main/default/objects/Report_Req__c/fields/Legacy_Rpt_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Rpt_Name__c</fullName>
    <label>Legacy Rpt Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>