force-app/main/default/objects/Report_Req__c/fields/Legacy_Stored_Proc__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Stored_Proc__c</fullName>
    <label>Legacy Stored Procedure</label>
    <length>244</length>
    <type>Text</type>
</CustomField>