force-app/main/default/objects/Report_Req__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer WOW - Contact Solution</fullName>
            </value>
            <value>
                <fullName>Customer WOW - Retail Solution</fullName>
            </value>
            <value>
                <fullName>Customer WOW - Industrial Accounts Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>