force-app/main/default/objects/Report_Req__c/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <description>Who is to receive this report?</description>
    <inlineHelpText>Who is to receive this report?</inlineHelpText>
    <label>Recipients</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Office</fullName>
            </value>
            <value>
                <fullName>External User</fullName>
            </value>
            <value>
                <fullName>ISM</fullName>
            </value>
            <value>
                <fullName>RD</fullName>
            </value>
            <value>
                <fullName>ROM</fullName>
            </value>
            <value>
                <fullName>Store Employee</fullName>
            </value>
            <value>
                <fullName>Store Manager</fullName>
            </value>
            <value>
                <fullName>TSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>