force-app/main/default/objects/Report_Req__c/fields/Report_Access__c.field-meta.xml
<CustomField>
    <fullName>Report_Access__c</fullName>
    <description>How will this report be accessed?</description>
    <inlineHelpText>How will this report be accessed?</inlineHelpText>
    <label>Accessibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Source Application</fullName>
            </value>
            <value>
                <fullName>File Share</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>RWSC Web/Portal</fullName>
            </value>
            <value>
                <fullName>External Web/Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>