force-app/main/default/objects/Report_Req__c/fields/Report_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Report_Frequency__c</fullName>
    <description>What is the frequency need to run this report?</description>
    <inlineHelpText>What is the frequency need to run this report?</inlineHelpText>
    <label>Report Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly/Period</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>