force-app/main/default/objects/Report_Req__c/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <description>Name of report</description>
    <label>Report Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>