force-app/main/default/objects/Report_Req__c/fields/Report_Priority__c.field-meta.xml
<CustomField>
    <fullName>Report_Priority__c</fullName>
    <label>Report Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical - Required for Go-Live</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>