force-app/main/default/objects/Report_Req__c/fields/Report_Source__c.field-meta.xml
<CustomField>
    <fullName>Report_Source__c</fullName>
    <label>Report Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>