force-app/main/default/objects/Report_Req__c/fields/ReportID__c.field-meta.xml
<CustomField>
    <fullName>ReportID__c</fullName>
    <label>ReportID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>