force-app/main/default/objects/Report_Req__c/fields/Security_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Security_Requirements__c</fullName>
    <label>Security Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>