force-app/main/default/objects/Report_Req__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>What systems have the data?</description>
    <inlineHelpText>What systems have the data?</inlineHelpText>
    <label>Source System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>Enfinity</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>PaymenTech</fullName>
            </value>
            <value>
                <fullName>RWSC BI</fullName>
            </value>
            <value>
                <fullName>SalesForce</fullName>
            </value>
            <value>
                <fullName>Vertex</fullName>
            </value>
            <value>
                <fullName>XBR</fullName>
            </value>
            <value>
                <fullName>Xcenter</fullName>
            </value>
            <value>
                <fullName>Xstore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>