force-app/main/default/objects/Report_Req__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of report</description>
    <inlineHelpText>Status of report</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <color>#FFCC33</color>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#009900</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Estimated</fullName>
                <color>#009900</color>
                <label>Estimated</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
                <color>#009900</color>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>Ready for Test</fullName>
                <color>#009900</color>
                <label>Ready for Test</label>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <color>#6600CC</color>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#000000</color>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#FF0000</color>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>