force-app/main/default/objects/Report_Req__c/fields/Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Status_Notes__c</fullName>
    <description>Required when status is set to Deferred or Cancelled</description>
    <label>Status Notes</label>
    <type>TextArea</type>
</CustomField>