force-app/main/default/objects/Report_Req__c/fields/Technical_Spec_Path__c.field-meta.xml
<CustomField>
    <fullName>Technical_Spec_Path__c</fullName>
    <description>The SharePoint path for the collaborative spec documentation.</description>
    <inlineHelpText>Enter a URL for locating the technical specification document to create this report.</inlineHelpText>
    <label>Technical Spec Path</label>
    <type>Url</type>
</CustomField>