force-app/main/default/objects/Report_Req__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>Project_Name__c</columns>
    <columns>NAME</columns>
    <columns>Report_Source__c</columns>
    <columns>Source_System__c</columns>
    <columns>Detailed_Requirement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>AllRWSPublicGroup</group>
    </sharedTo>
</ListView>